[project]
name = "datagen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "draccus>=0.11.5",
    "huggingface-hub>=0.20.0",
    "jinja2>=3.1.6",
    "openai",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
